2009-06-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.38 (tag v0.38)

	* configure.in (AC_INIT): Bump version to "0.38" for release.

2009-06-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Mention imminent demise of certain procs.

	* doc/guile-pg.twerp (Processing Results):
	Don't mention `pg-set-client-data!'.
	(Miscellaneous): Use object property in tracing example.

2009-06-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Use automake facilities for building HTML docs.

	* doc/Makefile.am (DISTCLEANFILES): Remove guile-pg.html.
	(EXTRA_DIST): Remove html; add guile-pg.html.
	(html): Delete target.

2009-06-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Minimize "make -C doc/" work in default case.

	* doc/Makefile.am (CLEANFILES): Delete var.
	(DISTCLEANFILES): New var.

2009-06-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[config] Use CPPFLAGS, LDFLAGS directly.

	* configure.in: Add some AC_MSG_NOTICE calls.
	(CPPFLAGS, LDFLAGS): Set these vars.

2009-06-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	New (database postgres) proc: pg-server-version

	* doc/guile-pg.twerp (Database Connections):
	Add @twerpdoc for `pg-server-version'.
	* configure.in (AC_CHECK_FUNCS): Add PQserverVersion.

2009-06-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Update description of connection object xrep.

	* doc/guile-pg.twerp (Database Connections): For unix-domain
	connections, mention that "host" is the socket directory name.

2009-06-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[config] Avoid "test -a" in configure.in.

	* configure.in: Use test A && test B, instead of test A -a B.

2009-06-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[config] Trim `EXTRA_DIST' in Makefile.am files.

	* Makefile.am (EXTRA_DIST): Delete THANKS.
	* doc/Makefile.am (EXTRA_DIST): Delete twerp.mk-am-frag.

2009-06-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Zonk HACKING, TODO; nfc.

	* HACKING: Delete file.
	* TODO: Delete file.
	* Makefile.am (EXTRA_DIST): Delete HACKING, TODO.
