@@ -1,3 +1,10 @@
+2010-01-11  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	Drop proc `pg-lo-get-connection'.
+
+	* doc/guile-pg.twerp (Large Objects):
+	Remove @twerpdoc for `pg-lo-get-connection'.
+
 2009-06-22  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	Release: 0.38 (tag v0.38)
